--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <html>
 <body>
-I cross till I am weary
-A Mountain — in my mind —
-More Mountains — then a Sea —
-More Seas — And then
-A Desert — find —
+I cross till I am weary<br>
+A Mountain — in my mind —<br>
+More Mountains — then a Sea —<br>
+More Seas — And then<br>
+A Desert — find —<br><br>
 
-And My Horizon blocks
-With steady — drifting — Grains
-Of unconjectured quantity —
-As Asiatic Rains —
+And My Horizon blocks<br>
+With steady — drifting — Grains<br>
+Of unconjectured quantity —<br>
+As Asiatic Rains —<br><br>
 
-Nor this — defeat my Pace —
-It hinder from the West
-But as an Enemy's Salute
-One hurrying to Rest —
+Nor this — defeat my Pace —<br>
+It hinder from the West<br>
+But as an Enemy's Salute<br>
+One hurrying to Rest —<br><br>
 
-What merit had the Goal —
-Except there intervene
-Faint Doubt — and far Competitor —
-To jeopardize the Gain?
+What merit had the Goal —<br>
+Except there intervene<br>
+Faint Doubt — and far Competitor —<br>
+To jeopardize the Gain?<br><br>
 
-At last — the Grace in sight —
-I shout unto my feet —
-I offer them the Whole of Heaven
-The instant that we meet —
+At last — the Grace in sight —<br>
+I shout unto my feet —<br>
+I offer them the Whole of Heaven<br>
+The instant that we meet —<br><br>
 
-They strive — and yet delay —
-They perish — Do we die —
-Or is this Death's Experiment —
-Reversed — in Victory?
+They strive — and yet delay —<br>
+They perish — Do we die —<br>
+Or is this Death's Experiment —<br>
+Reversed — in Victory?<br><br>
 </body>
 </html>
